# electrock-infer

./: README.md  bench.py  eval3.py  example.py  installation.py  pyproject.toml  pytorch_bind.cpp  setup.py
electrock_infer/: .ps__0000004bc08f29100000035  __init__.py  config.py  llm.py  sampling_params.py
electrock_infer/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
electrock_infer/flash_infer/: engine_core.py  kvcache_manager.py  mixtral.py  model_executer.py
electrock_infer/layers/: attention.py  attention_triton_kernel.py  embed_head.py  layernorm.py  linear.py
electrock_infer/models/: mixtral.py  qwen3.py
electrock_infer/utils/: context.py  loader.py  mixtral_info.txt
nanovllm/: config.py
nanovllm/csrc/: activation_kernels.cu  add_rms_norm.cu  moe_align_block_size.cu  moe_sum.cu  silu_mul_kernel.cu  topk_softmax_kernels.cu
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: attention.py  attention_triton_kernel.py  embed_head.py  layernorm.py  linear.py
nanovllm/models/: mixtral.py
nanovllm/test/: cuda_rotary_embedding.py
nanovllm/utils/: context.py  loader.py  (+1 more)
src/: activation_kernels.cu  activation_kernels.hip  add_rms_norm.cu  add_rms_norm.hip  flash_attn_varlen_gqa_causal_hip.hip  moe_align_block_size.cu  moe_align_block_size.hip  moe_sum.cu  moe_sum.hip  moe_sum_efficient.cu  moe_sum_efficient.hip  paged_attn_gqa_varlen.hip  store_kv_cache.hip  topk_softmax_kernels.hip
test/: cuda_rotary_embedding.py  verify_flash_attn_mask.py
(+32 files in other folders)
